On 64bit macOS, enlarge heap pages to reduce mmap calls [Bug #18447]